blurry fixed header replaces shifty-header; adds header-background css var

--- a/src/js/custom_elements/expandable/expandable.styl
+++ b/src/js/custom_elements/expandable/expandable.styl
@@ -4,7 +4,7 @@ expand-able
   background var(--brand-color)
   border 2px solid var(--brand-color)
   border-radius (button-height / 2)
-  color var(--card-background)
+  color var(--body-background)
   cursor pointer
   display flex
   font-size em(14)
@@ -38,7 +38,7 @@ expand-able
     transition background transition ease, border transition ease, color transition ease
 
   &::before
-    css-triangle(var(--card-background), 5px, 'down')
+    css-triangle(var(--body-background), 5px, 'down')
     content ''
     display inline-block
     margin-right rem(8)
