--- a/src/js/custom_elements/user_values/user_values.styl
+++ b/src/js/custom_elements/user_values/user_values.styl
@@ -25,7 +25,7 @@ user-values
 
   @media breakpoint.large
     position sticky
-    top calc(var(--sticky-offset) + var(--grid-gap))
+    top calc(var(--header-height) + var(--grid-gap))
 
   [no-js] &
     display none
